--- a/README
+++ b/README
@@ -1,36 +1,19 @@
- Welcome to...
+Welcome to Dock 9 -- http://github.com/emsenn/Dock-9/
 
-          -- Sapidlib --
-         ** UNRELEASED **
+Dock 9 is a MUD (multiple-user dimension) that focuses on being very
+detailed, making a game world that is not only high quality but fun
+to explore.  Founded in October, 2009, and built on FluffOS (RocktheHalo
+variant) and the Sapidlib mudbase by emsenn (Morgan Sennhauser) and abzde 
+(Hunter Carroll), Dock 9 attempts to take advantage of being text only, 
+to create a game environment that would be nearly impossible with graphics.
 
- This readme is to help point you in the right direction.
-
-o If you are new to setting up a mud or would like detailed
-   instructions, please see ./etc/README.install
-o If you are an advanced user or just want a quickstart guide,
-   then please see ./etc/README.quickstart
-o If you are looking for the mudlib readme, then please see
-   ./etc/README.mudlib
-o If you are looking for the license and copyright information,
-   please see ./license and ./copyright
-o If you are looking for the driver source (and related) then
-   please see ./driver/
-o If you are looking for the mudlib, then please see 
-   ./lib/
-o If you are looking for the executable, then please see
-   ./bin/
-o If you are looking for the startmud script (and other
-   misc. files) then please see ./etc/
-o If you are looking for the website, then please visit
-   http://launchpad.net/sapidlib/
-o You can contact us on IRC at irc://irc.freenode.net/#lpuni
-o You can find a general LPC chat at irc://irc.freenode.net/##lpc
-
-If you have any further questions, comments, concerns, etc.
-then please visit our website, launchpad project page, or 
-e-mail me at cody.somerville@gmail.com
-
-Thank you!
-
-Sapidlib Team
-
+- If you are completely new to running a MUD, please see ./etc/README.install
+- If you are just new to Dock 9, but have used another LPC MUD before, please
+  see ./etc/README.quickstart
+- If you are looking for information about the MUD library, please see 
+  ./etc/README.mudlib
+- If you are looking for license and copyright information, please see 
+  ./license and ./copyright respectively.
+- If you are interested in the driver (the interpretter which parses the LPC
+  code), please see ./driver/  -- note that Dock 9 uses the RocktheHalo 
+  version of FluffOS, available under ./driver/rth/
